- Added Opium tag to PlayerList